[package]
name = "struct_iterable"
version = "0.1.1"
authors = ["André de Moraes <deco.moraes@icloud.com>"]
edition = "2021"
description = "A Rust library providing a proc macro to make a struct iterable."
license = "MIT"
repository = "https://github.com/decomoraes/rust_struct_iterable"
readme = "README.md"
keywords = ["proc-macro", "struct", "iterable"]
categories = ["development-tools::cargo-plugins"]
homepage = "https://github.com/decomoraes/rust_struct_iterable"
documentation = "https://docs.rs/struct_iterable"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    "struct_iterable_derive",
    "struct_iterable_internal",
]

[dependencies]
struct_iterable_derive = { path="struct_iterable_derive" }
struct_iterable_internal = { path="struct_iterable_internal" }

[lib]
name = "struct_iterable"
path = "src/lib.rs"

[[example]]
name = "custom-trait"
path = "examples/custom_trait.rs"

[[example]]
name = "any"
path = "examples/any.rs"

[package.metadata.docs.rs]
all-features = true
